@@ -8,6 +8,7 @@ __cythercache__/
 /example_file.c
 /example_file.html
 /example_file.lis
+/README.rst
 /xubuntu_testing_instructions.txt
 
 # Byte-compiled / optimized / DLL files
