@@ -11,4 +11,5 @@ install:
     - pip install cython
 
 script:
+    - cyther test
     - nosetests
