@@ -5,7 +5,7 @@ MAINTAIN
 
     Comment and properly docstring everything
 
-    Keep the -h follow all the other common -h practices
+    Keep the -h following all the other common -h practices
 
     Make sure that the -h is up to date, including all the version info of all the external features (gcc/Cython)
 
@@ -28,11 +28,22 @@ TO-DO (before next version)
         The '--test' option. Make it and add it to the help text
 
     DEPLOYMENT:
+        Keep an eye on Code Climate, Travis, and CodeShip!!
+        Put in downloads per day tag!
         How to tell travis what the script is
         Follow as many conventions as possible in the bookmark 'PYPI tutorial'
             Make a requirements list in setup.py (setuptools + cython)
 
+    DOCS:
+        Find the best format for the docstrings that is the most universal
+            Sphinx?? What format does it use
+        Make all documentation more readable and helpful
+        Put a basic overview docstring at the beginning of each file (what is each file for?)
+
     TECHNICAL:
+        Make cytherize and getIncludeAndRuntime shorter
+            Change the name of cytherize to something more meaningful
+        Why does travis keep telling me "No such file or directory: 'cytherize'"
         What is the use of the vcruntime.dll on windows installations? Does it need to be included?
         Make sure a new window doesnt get spawned on the subprocess calls (on some systems it does, some it doesnt)
         Implement the makefile system
@@ -40,38 +51,65 @@ TO-DO (before next version)
         Get it working on Xubuntu ---> should cascade fix many other errors
 
     README:
+        Try the automatic page generator tool for github!
+
         Fix the help text in the readme to not have 'Nothing here yet'
         Change the descripting of the readme so that it doesn't say that it is directly a compiler, but a processor instead
+            It technically IS a compiler, but really, it weilds both compilers and ties them together
+            User doesn't have to know WTF they are doing in order for it to completely work
+            Offers partial compiling unlike distutils
+            Dont need to know how to use distutils, instead goes simpler; How to use a makefile (tons of documentation)
+            Exists because the definition of distutil's build_ext system is very weak
         Say that if there is an error, to email me the output of the '--test' option
 
 FIX
 
-    Whats up with CYTHER_CONFIG_FILE? Should we use it?
+    Theres an odd bug where "INSTALL_REQUIRES = ['cython']" will install the non-latest version of cython.
 
-    Fix issue posted on cyther/issues
-        Investigate cold installations and usage of other operating systems
-
-    Get the operating system dependant flags that are passed to gcc by distutils and inject them when building the
-    preset (see question you posed)
+    Sometimes the warnings from gcc or cython are percieved to be errors, because they go through the same pathway.
+        Can this be sorted out by regex style pattern recog??
 
 NEW FEATURES
 
+    What about Magnum CI and Circle CI and other methods for continuous integration
+
+    Have the CYTHER_CONFIG_FILE hold the paths to the compiler executables!
+        Then, it may be ok to not have gcc in the path, and thus a seperate and private gcc can be used
+
+    So for this ^ we need a massive function to search through the drive as far as possible and implement regex patterns
+
+    Flag names for condiferation:
+        cyther --configure :: Triggers the compiler search AGAIN
+        cyther --setup :: Sets up the base 'makefile'. Errors if the makefile exists, asks to overwrite.
+        cyther --make :: Just like GNU's 'make' command. Takes a optional argument of the name of the file to run.
+        cyther --test :: Runs the testing script. Returns tons of information.
+        cyther --help :: Prints the help text
+        cyther --purge :: Cleans the current directory of anything 'cyther' related. Deletes the cache.
+
+    BUT HOW TO THE INDIVIDUAL CYTHER OPTIONS FIT INTO THE MAKEFILE SYSTEM?
+
+    Make something like an 'instance' object to create independantly of core, THEN pass to core
+        What it will do it be an object holding the attribute values of the different arg_parse flags.
+
     Get the arguments of run(timer=True) to work properly, or be automatic, like IPython
 
-    Get crawl to find libpython, and also rename crawl to 'what'
-
-    Erase Cyther's usage of distutils entirely
+    Get where to find libpython!!
 
     Instead of the include option, have the system automatically detect the python {}.get_include() modules
 
     Say the search for the directories necessary for the runtime compilation fails, and returns nothing. Then run the
     crawl algorithm over the whole DRIVE to find a lib file that matches the REGEX definition
 
+    Make cyther able to use the microsoft compiler cl; to mesh well with the windows system
+        However, we need a powerful searching algorithm to find all the correct executables...
+
+    Make the example_file.pyx a prototype for the SuperObject system. Implementing live testing of it?
+
+
 
 LOW PRIORITY
 
-    Function to clean a directory of everything 'locally build' related, or move it to a cythercache
-        A function to remove EVERYTHING cyther related
+    Erase Cyther's usage of distutils entirely
 
     Always back up the previous compile if there was one. Then if there is an error, don't overwrite it with anything,
     but instead, keep the backup version. Have the new compilation attempt be built in the __cythercache__ directory
@@ -100,8 +138,6 @@ QUESTIONS (for me to ask myself)
     Don't have args and file, have only one object with everything in it. Does this even make sense?
 
     Is it wise to take out the checking procedures with the getIncludeAndRuntime() function. Why are they necessary??
-
-    Would it be possible to automatically send me their __cytherinfo__ variable?
 
     Will sift ever have to return multiple results for the lib directories??
 
