@@ -1,0 +1,3 @@
+machine:
+  python:
+    version: 3.5.2
